Fix homepage responsiveness on tablet

--- a/src/assets/styles/niched-styles.css
+++ b/src/assets/styles/niched-styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .homepage-container {
-  max-width: 1100px;
+  max-width: 1000px;
   width: 100%;
 }
 
